@@ -1,3 +1,8 @@
+2013-02-15  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf_formstring.c (dwarf_formstring): Check dbg_ret->sectiondata,
+	not dbg->sectiondata.
+
 2013-01-07  Roland McGrath  <roland@hack.frob.com>
 
 	* memory-access.h
